# vespertilio

./: 48LM01 SPI SRAM t.b.d.py  IS62 SPI SRAM.py  PCB_PCB_Batcorder_4LAYER_2022-12-10.json  README.md
Case/: vespertilo.c4d
Case & Environmental Concept/: Environmental Case Concept.ai  to_fix_website.txt  vespertilo.mtl
Case & Environmental Concept/Battery Contact Models/: 209.stp  Battery Contacts.c4d
Case & Environmental Concept/Internal Case Designs/: README.md
Circuit Schematics/Analogue Circuitry/: Draft2.asc  Draft2.op.raw  Draft2.raw
Circuit Schematics/Power and Regulation/: Power and Regulation.kicad_prl  Power and Regulation.kicad_pro  Power and Regulation.kicad_sch
Firmware/: CMakeLists.txt  SRAM_SD_Testing.cpp  vespertilio.cpp
Firmware/deprecated/: recording.c  recording.h
Firmware/deprecated/mcp4131_digipot_ver1/: mcp4131_registers.c
Firmware/drivers/FatFs_SPI/ff14a/source/: diskio.h  ff.c  ff.h  ffconf.h
Firmware/drivers/FatFs_SPI/sd_driver/: crc.c  sd_card.c  sd_card.h  sd_spi.c  spi.c  spi.h
Firmware/drivers/FatFs_SPI/src/: glue.c  my_debug.c
Firmware/drivers/SRAM/: IS62_SRAM.c  IS62_SRAM.h
Firmware/drivers/Utilities/: custoclocks.c  custoclocks.h  external_config.c  external_config.h  pinout.h  universal_includes.h  utils.c  utils.h
Firmware/drivers/Utilities/pinout/: v5.c  v5.h  v6.c  v6.h  v8.c  v8.h
Firmware/drivers/bme280/: bme280_spi.c  bme280_spi.h
Firmware/drivers/ext_adc/: ext_adc.h  mcp33151d.pio
Firmware/drivers/ext_io/: ext_io.c  ext_io.h  ext_io_registers.c  ext_io_registers.h
Firmware/drivers/ext_rtc/: ext_rtc.c  ext_rtc.h  ext_rtc_registers.c  ext_rtc_registers.h
Firmware/drivers/flashlog/: flashlog.c  flashlog.h
Firmware/drivers/mSD/: hw_config.c  mSD.c  mSD.h
Firmware/drivers/mcp4131_digipot/: mcp4131_registers.c  mcp4131_registers.h  spi_driver.c  spi_driver.h
Firmware/drivers/pico_usb_configure/: vespertilio_usb_int.c  vespertilio_usb_int.h
Firmware/drivers/recording/: multicore_struct.h  recording_singlethread.c  recording_singlethread.cpp  recording_singlethread.h
Firmware/drivers/veml/: i2c_driver.c  i2c_driver.h  veml_registers.c  veml_registers.h
IS62 SPI SRAM Driver/: IS62_DRIVER.py  README.md
IS62 SPI SRAM Driver/c_drivers/: IS62_DRIVER_Old.c
KiCad Schemas/ECH8654-SPICE-D.rev1/: ECH8654-SPICE-D.txt  README_Japanese.txt
KiCad Schemas/MCP4131 Potentiometer/: MCP4131-103E_SN.kicad_sym  Si2315BDS.kicad_sym
KiCad Schemas/MEM2061 MicroSD/: MEM2061-01-188-00-A_REVA.kicad_sym
KiCad Schemas/MICROPHONE/: Types of output interfaces of MEMS microphones.mhtml
KiCad Schemas/MaximReference/: MAX6071AAUT30T.lib  MAX6071AAUT30T.step  SOT95P280X145-6N.kicad_mod
KiCad Schemas/MaximRegulator/: MAX8510EXK33T.bak  MAX8510EXK33T.kicad_sym
PCB/: BOM V6 ACCURATE.ods
PCB/BME Coin/: README.md
PCB/BME USB Connector/: README.md
PCB/Ver. 3/: Bill of Materials.ods
PCB/VesPOW Dual Buck PCB/: README.md
Python Interface/: general_readme.txt  readme.md  readme.txt  usb_serial_interface.py
RTC/: CMakeLists.txt  RTC.c  ext_rtc.c  ext_rtc.h  ext_rtc_registers.c
SRAM_SD_Testing/: CMakeLists.txt  SRAM_SD_Testing.cpp
SRAM_SD_Testing/deprecated/: recording.c  recording.h
SRAM_SD_Testing/drivers/: deprecated_code.txt  readme.md
SRAM_TEST/: SRAM_TEST.c
SRAM_TEST_LS62/: SRAM_TEST_LS62.c
Silkscreen Design Files/Ver. 3/: New Batcorder Design.ai
backups/RTC/: ext_rtc.h  ext_rtc_registers.h
configuration_python_interface/: configuration_readme.txt  readme.md  readme.txt  usb_serial_interface.py  vespertilio_config.json
(+82 files in other folders)
